--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   },
   "devDependencies": {
     "react-native": ">=0.19.0"
+  },
+  "publishConfig": {
+    "registry": "https://nexus.contactis.pl/repository/npm-internal"
   }
 }
